vlib/v/parser/tests/export_interop_func_err.vv
@[export: 'test']
fn C.printf(s string)
